# tools-programmer

./: .eslintrc.json  .prettierrc  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: generate_cnpj.rs  generate_cpf.rs  generate_rg.rs  generate_uuids.rs  main.rs  validate_cnpj.rs  validate_cpf.rs
src-tauri/src/convertNumbers/: decimal_to_number.rs
src/components/Button/: index.tsx
src/components/Input/: index.tsx
src/components/TextArea/: index.tsx
src/layout/: default.tsx
src/pages/: GenerateCNPJ.tsx  GenerateCPF.tsx  Init.tsx
src/pages/ConvertNumbers/: index.tsx
src/pages/cnpj/: index.tsx
src/pages/cnpj/components/: GenerateCNPJ.tsx  ValidateCNPJ.tsx
src/pages/cpf/: index.tsx
src/pages/cpf/components/: GenerateCpf.tsx  ValidateCpf.tsx
src/pages/generateUUids/: index.tsx
src/pages/rg/: index.tsx
src/routes/: index.tsx
